<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">   </string>
    <string name="action_settings">Settings</string>
    <string name="walking">Walking</string>
    <string name="driving">Driving</string>
    <string name="transit">Transit</string>
    <string name="bicycling">Bicycling</string>
    <string name="use_current_location">Uses current Location as starting point</string>
    <string name="search">Search</string>
    <string name="mode">mode that user picked</string>

</resources>
