<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2012 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- This can go anywhere in your layout (see other demos for some examples). -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.google.android.maps.MapView
        android:id="@+id/mapview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:apiKey="AIzaSyBf5Bx6WuYSxapZ0Wp0Iw_1FprYQ2eLjt4"
        android:clickable="true" />

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        class="com.google.android.gms.maps.SupportMapFragment" />

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <AutoCompleteTextView
            android:id="@+id/search_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:completionThreshold="1"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:singleLine="true" >

            <requestFocus />
        </AutoCompleteTextView>

        <LinearLayout
            android:id="@+id/summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:clickable="true"
            android:onClick="onSummaryClick"
            android:orientation="horizontal"
            android:visibility="invisible" >

            <ImageButton
                android:id="@+id/summary_mode"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:contentDescription="@string/mode"
                android:onClick="onModeClicked"
                android:src="@drawable/driving" />

            <TextView
                android:id="@+id/summary_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/modes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/driving"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:contentDescription="@string/driving"
            android:onClick="onModeClicked"
            android:src="@drawable/driving" />
        <!--
        <ImageButton
            android:id="@+id/transit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/transit"
            android:onClick="onModeClicked"
            android:src="@drawable/transit" />
        -->

        <ImageButton
            android:id="@+id/walking"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:contentDescription="@string/walking"
            android:onClick="onModeClicked"
            android:src="@drawable/walking" />

        <ImageButton
            android:id="@+id/bicycling"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginRight="15dp"
            android:contentDescription="@string/bicycling"
            android:onClick="onModeClicked"
            android:src="@drawable/bicycling" />

        <ImageButton
            android:id="@+id/use_current_location"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:contentDescription="@string/use_current_location"
            android:onClick="onCurrentClicked"
            android:src="@drawable/currentloc" />
    </LinearLayout>

</RelativeLayout>